--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- Stylesheet & Font Awesome Links End -->
   
-    <title>Bug Busters</title>
+    <title>Magic 8 Ball</title>
   </head>
 <body>
 
-    <!-- JavaScript Links -->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/js/script.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    JavaScript Links End -->
+  <!-- Footer -->
+  <footer>
+    <div class="copyright bg-dark">
+      <p>Copyright © dc games 2022</p>
+    </div>
+  </footer>
+  <!-- Footer End -->
+
+  <!-- JavaScript Links -->
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="assets/js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <!-- JavaScript Links End -->
 
 </body>
 
