feat: user input text box and submit button added

--- a/index.html
+++ b/index.html
@@ -25,9 +25,31 @@
     </div>
   </nav>
 
+  <!-- Header -->
+  <header>
+    <h1>Magic 8 Ball</h1>
+    <p>Hit the Magic 8 Ball with your question and it will answer.</p>
+  </header>
+  <!-- Header End-->
+
+
+  <!-- Magic 8 Ball -->
+  <div>
+
+  </div>
+  <!-- Magic 8 Ball End -->
+
+  <!-- User Question -->
+  <div class="user-input">
+    <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="What is your question?" required>
+    <button type="button" class="btn btn-primary">Shake!</button>
+  </div>
+  <!-- User Question -->
+
+
   <!-- Footer -->
   <footer>
-    <div class="copyright bg-dark">
+    <div class="copyright fixed-bottom">
       <p>Copyright © dc games 2022</p>
     </div>
   </footer>
