feat: 8 ball divs added

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
 
   <!-- Magic 8 Ball -->
-  <div>
-
+  <div class="ball-black">
+    <div class="ball-white">
+      <p id="answer">8</p>
+    </div>
   </div>
   <!-- Magic 8 Ball End -->
 
