--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </nav>
 
   <!-- Header -->
-  <header>
-    <h1>Magic 8 Ball</h1>
-    <p>Hit the Magic 8 Ball with your question and it will answer.</p>
+  <header class="heading">
+    <h1>The Magic 8 Ball</h1>
+    <p>Shake the Magic 8 Ball and it will answer your question.</p>
   </header>
   <!-- Header End-->
 
@@ -44,7 +44,7 @@
   <!-- User Question -->
   <div class="user-input">
     <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="What is your question?" required>
-    <button type="button" class="btn btn-primary">Shake!</button>
+    <button type="button" class="btn">Shake!</button>
   </div>
   <!-- User Question -->
 
