--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- User Question -->
   <div class="user-input">
     <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="What is your question?" required>
-    <button type="button" class="btn">Shake!</button>
+    <button type="button" class="btn" id="shakeButton">Shake!</button>
   </div>
   <!-- User Question -->
 
