feat: button click triggered by enter key

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- User Question -->
   <div class="user-input">
-    <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="What is your question?" required>
+    <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2 userQuestion" placeholder="What is your question?" required>
     <button type="button" class="btn" id="shakeButton">Shake!</button>
   </div>
   <!-- User Question -->
