feat: question validation and error message added

--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
 
   <!-- User Question -->
   <div class="user-input">
-    <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2 userQuestion" placeholder="What is your question?" required>
+    <input type="text" class="form-control mb-2 mr-sm-2 user-question" id="inlineFormInputName2" placeholder="What is your question?">
     <button type="button" class="btn" id="shakeButton">Shake!</button>
   </div>
   <!-- User Question -->
 
+  <div class="error-message-box">
+    <div class="error-message-text">
+    <p>Please ask a question!</p>
+  </div>
 
   <!-- Footer -->
   <footer>
