style: eight ball color and border color changed to blend with body background

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Magic 8 Ball -->
   <div class="ball-black">
     <div class="ball-white">
-      <p id="answer">8</p>
+      <p class="holding-text">8</p>
     </div>
   </div>
   <!-- Magic 8 Ball End -->
@@ -48,8 +48,8 @@
   </div>
   <!-- User Question -->
 
-  <div class="error-message-box">
-    <div class="error-message-text">
+  <div>
+    <div class="error-message-text error-message-display">
     <p>Please ask a question!</p>
   </div>
 
