--- a/index.html
+++ b/index.html
@@ -15,15 +15,10 @@
   <!-- Stylesheet & Font Awesome Links End -->
   
   <title>Magic 8 Ball</title>
+  <link rel="icon" type="image/x-icon" href="assets/images/8-ball-favicon.webp">
 </head>
 
 <body>
-
-  <nav class="navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand ms-auto" href="#">dc games</a>
-    </div>
-  </nav>
 
   <!-- Header -->
   <header class="heading">
@@ -31,7 +26,6 @@
     <p>Shake the Magic 8 Ball and it will answer your question.</p>
   </header>
   <!-- Header End-->
-
 
   <!-- Magic 8 Ball -->
   <div class="ball-black">
@@ -41,17 +35,19 @@
   </div>
   <!-- Magic 8 Ball End -->
 
-  <!-- User Question -->
-  <div class="user-input">
+  <!-- User Input -->
+  <div>
     <input type="text" class="form-control mb-2 mr-sm-2 user-question" id="inlineFormInputName2" placeholder="What is your question?">
     <button type="button" class="btn" id="shakeButton">Shake!</button>
   </div>
-  <!-- User Question -->
+  <!-- User Input -->
 
+  <!-- Validation Error Message -->
   <div>
     <div class="error-message-text error-message-display">
-    <p>Please ask a question!</p>
+      <p>Please ask a question!</p>
   </div>
+  <!-- Validation Error Message End -->
 
   <!-- Footer -->
   <footer>
@@ -61,11 +57,9 @@
   </footer>
   <!-- Footer End -->
 
-  <!-- JavaScript Links -->
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <!-- JavaScript Link -->
   <script type="text/javascript" src="assets/js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <!-- JavaScript Links End -->
+  <!-- JavaScript Link End -->
 
 </body>
 
