--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <!-- Stylesheet & Font Awesome Links -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&family=Press+Start+2P&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   <!-- Stylesheet & Font Awesome Links End -->
   
@@ -47,6 +46,7 @@
       <div>
         <div class="error-message-text error-message-display">
           <p>Please ask a question!</p>
+        </div>
       </div>
       <!-- Validation Error Message End -->
     </main>
@@ -60,7 +60,7 @@
     <!-- Footer End -->
 
     <!-- JavaScript Link -->
-    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <!-- JavaScript Link End -->
   </div>
 </body>
