docs: bugs testing complete on testing document.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div class="game-content">
+  <div class="page-content">
     <!-- Header -->
     <header class="heading">
       <h1>The Magic 8 Ball</h1>
@@ -52,10 +52,8 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
-      <div class="copyright">
+    <footer class="copyright">
         <p>Copyright © dc games 2022</p>
-      </div>
     </footer>
     <!-- Footer End -->
 
